fix sponsor logo height distortion

--- a/src/app/shared/sponsors-section/sponsors-section.component.scss
+++ b/src/app/shared/sponsors-section/sponsors-section.component.scss
@@ -50,6 +50,14 @@
     @include breakpoint-l {
       width: 450px !important;
     }
+
+    img {
+      position: relative;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+    }
   }
 
   .sponsors-section__item {
@@ -60,7 +68,7 @@
       display: block;
       margin: 0 auto;
       max-width: 100%;
-      height: 233px;
+      max-height: 233px;
       width: auto;
     }
 
